<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_self_introduce_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_introduce_my_self"
            android:textAppearance="@style/TextAppearance.Mashup.Subtitle1_16_B"
            app:layout_constraintBottom_toBottomOf="@id/btn_edit_self_introduce"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_edit_self_introduce" />

        <TextView
            android:id="@+id/btn_edit_self_introduce"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_common_dialog_20"
            android:backgroundTint="@color/gray100"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/txt_edit"
            android:textAppearance="@style/TextAppearance.Mashup.Caption1_12_R"
            android:textColor="@color/gray600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_edit_self_introduce">

            <TextView
                android:id="@+id/tv_self_introduce_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/empty_introduce_my_self"
                android:textAppearance="@style/TextAppearance.Mashup.Body3_14_M"
                android:textColor="@color/gray300"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:drawablePadding="6dp"
                android:textAppearance="@style/TextAppearance.Mashup.Body3_14_M"
                android:textColor="@color/gray600"
                app:drawableStartCompat="@drawable/img_cake"
                tools:text="02.08.28" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.Mashup.Body3_14_M"
                android:textColor="@color/gray600"
                android:text="매쉬업에 뼈를 묻겠습니다!! 브랜딩팀 아자! 아자!" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray100" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>